--- a/main.css
+++ b/main.css
@@ -71,3 +71,12 @@ a:hover {
  width: 95%;
  background: rgba(0,0,0,0.4);
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline;
+}
