--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ a {
   color: gold;
   text-decoration: none;
 }
-}
+
 a:hover {
   color: skyblue;
 }
@@ -74,7 +74,10 @@ a:hover {
  background: rgba(0,0,0,0.4);
 }
 #navbar {
-    background-color: transparent;
+    width:200px;
+    margin:0 auto;
+    padding:20px 0;
+    background:#3D3331;
 }
 ul {
     list-style-type: none;
