Add background color to navbar

--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ a:hover {
     width:200px;
     margin:0 auto;
     padding:20px 0;
-    background:#3D3331;
+    background:#666666;
 }
 ul {
     list-style-type: none;
