--- a/main.css
+++ b/main.css
@@ -79,6 +79,15 @@ a:hover {
     padding:20px 0;
     background:#666666;
 }
+ul#nav {
+    font-family: Verdana;
+    font-size:14px;
+    list-style:none;
+    margin:0 auto;
+    padding:0;
+    width:455px;
+    overflow: auto;
+}
 ul {
     list-style-type: none;
     margin: 0;
