--- a/main.css
+++ b/main.css
@@ -88,6 +88,14 @@ ul#nav {
     width:200px;
     overflow: auto;
 }
+ul#nav li a:hover {
+    background:#a37666;
+    color:#000;
+    border-top:2px solid #815444;
+    border-right:2px solid #c59888;
+    border-bottom:2px solid #c59888;
+    border-left:2px solid #815444;
+}
 ul {
     list-style-type: none;
     margin: 0;
