--- a/main.css
+++ b/main.css
@@ -74,10 +74,10 @@ a:hover {
  background: rgba(0,0,0,0.4);
 }
 #navbar {
-    width:200px;
+    width:100%;
     margin:0 auto;
     padding:20px 0;
-    background:#666666;
+    background:transparent;
 }
 ul#nav {
     font-family: Verdana;
@@ -85,16 +85,12 @@ ul#nav {
     list-style:none;
     margin:0 auto;
     padding:0;
-    width:200px;
+    width:100%;
     overflow: auto;
 }
 ul#nav li a:hover {
     background:#a37666;
     color:#000;
-    border-top:2px solid #815444;
-    border-right:2px solid #c59888;
-    border-bottom:2px solid #c59888;
-    border-left:2px solid #815444;
 }
 ul#nav li a {
     text-decoration:none;
@@ -104,11 +100,6 @@ ul#nav li a {
     color:#eee;
     float:left;
     text-align:center;
-    border-top:2px solid #815444;
-    border-right:2px solid #3d1000;
-    border-bottom:2px solid #3d1000;
-    border-left:2px solid #815444;
-}
 ul {
     list-style-type: none;
     margin: 0;
